--- a/assets/style/css.css
+++ b/assets/style/css.css
@@ -271,6 +271,7 @@ header
    {
       height: 100vh;
       padding: 20px;
+      padding-top: 150px;
    }
    .About-me .container p
    {
@@ -278,8 +279,20 @@ header
       margin: 10px;
    }
 }
-
-
+@media(max-width:600px)
+{
+   .About-me 
+   {
+      padding-top: 300px;
+   }
+}
+@media(max-width:450px)
+{
+   .About-me 
+   {
+      padding-top: 550px;
+   }
+}
 
 
 
